--- a/R19A.bib
+++ b/R19A.bib
@@ -140,6 +140,98 @@
   year={1994}
 }
 
+
+@techreport{aci1998r,
+  author      = {{ACI}},
+  institution = {American Concrete Institute},
+  title       = {Report on Alkali-Aggregate Reactivity},
+  address     = {Farmington Hills, MI.},
+  number      = {ACI 221.1R--98},
+  year        = {1998}
+}
+
+@techreport{aci2001c,
+  author      = {{ACI}},
+  institution = {American Concrete Institute},
+  title       = {Control of Cracking in Concrete Structures},
+  address     = {Farmington Hills, MI.},
+  number      = {ACI 224R--01},
+  year        = {2001}
+}
+
+@techreport{aci2001p,
+  author      = {{ACI}},
+  institution = {American Concrete Institute},
+  title       = {Protection of Metals in Concrete Against Corrosion Protection of Metals in Concrete Against Corrosion},
+  address     = {Farmington Hills, MI.},
+  number      = {ACI 222R--01},
+  year        = {2001}
+}
+
+@techreport{aci2003d,
+  author      = {{ACI}},
+  institution = {American Concrete Institute},
+  title       = {Design and Construction Practices to Mitigate Corrosion of Reinforcement in Concrete Structures},
+  address     = {Farmington Hills, MI.},
+  number      = {ACI 222.3R--03},
+  year        = {2003}
+}
+
+@techreport{aci2003g,
+  author      = {{ACI}},
+  institution = {American Concrete Institute},
+  title       = {Guide for Structural Lightweight-Aggregate Concrete},
+  address     = {Farmington Hills, MI.},
+  number      = {ACI 213R--03},
+  year        = {2003}
+}
+
+@techreport{aci2006g,
+  author      = {{ACI}},
+  institution = {American Concrete Institute},
+  title       = {Guide for the Use of Silica Fume in Concrete},
+  address     = {Farmington Hills, MI.},
+  number      = {ACI 234R--06},
+  year        = {2006}
+}
+
+@techreport{aci2007s,
+  author      = {{ACI}},
+  institution = {American Concrete Institute},
+  title       = {Self-Consolidating Concrete},
+  address     = {Farmington Hills, MI.},
+  number      = {ACI 237R--07},
+  year        = {2007}
+}
+
+@techreport{aci2008g,
+  author      = {{ACI}},
+  institution = {American Concrete Institute},
+  title       = {Guide to Durable Concrete},
+  address     = {Farmington Hills, MI.},
+  number      = {ACI 201.2R--08},
+  year        = {2008}
+}
+
+
+@techreport{aci2010g,
+  author      = {{ACI}},
+  institution = {American Concrete Institute},
+  title       = {Guide to Cold Weather Concreting},
+  address     = {Farmington Hills, MI.},
+  number      = {ACI 306R--10},
+  year        = {2010}
+}
+
+@techreport{aci2011b,
+  author      = {{ACI}},
+  institution = {American Concrete Institute},
+  title       = {Building Code Requirements for Structural Concrete and Commentary},
+  address     = {Farmington Hills, MI.},
+  number      = {ACI 318--11},
+  year        = {2011}
+}
+
 @manual{ehlen2003b,
   author       = {Ehlen, M. A.},
   year         = {2003},
@@ -386,6 +478,22 @@
   address      = {Germany},
 }
 
+@techreport{markeset2006g,
+  author      = {Markeset, Gro and Rostam, Steen and Klinghoffer, Oskar},
+  institution = {Norwegian Building Research Institute},
+  title       = {Guide for the use of stainless steel reinforcement in concrete structures},
+  year        = {2006},
+  number      = {Nordic Innovation Centre Project 04118, Project Report 405},
+  address     = {Oslo, Norway}
+}
+
+@book{markeset2006g,
+  title={Guide for the use of stainless steel reinforcement in concrete structures},
+  author={},
+  year={},
+  publisher={Norges byggforskningsinstitutt}
+}
+
 @article{ala2016p,
   title={Predicting the service life of sliding surfaces in bridge bearings},
   author={Ala, Nima and Power, Edward H and Azizinamini, Atorod},
@@ -405,6 +513,15 @@
   number={2},
   pages={59--81},
   year={2014},
+}
+
+@article{suprenant1996e,
+  title={Evaluating Fire Damaged Concrete},
+  author={Suprenant, B A},
+  journal={Concrete and reinforcing steel properties can be compromised at elevated temperatures. Publication},
+  volume={970020},
+  pages={199},
+  year={1996}
 }
 
 @article{azizinamini1997s,
