--- a/contents/chp01.tex
+++ b/contents/chp01.tex
@@ -479,7 +479,7 @@
 
 % There are different approaches to solving Fick's second law. A finite difference approach, or the use of error functions, is reported in published literatures. Equation 1.4 is an error function solution of Fick's second law, capable of predicting the chloride concentration level at various depths within the concrete element.
 
-求解菲克第二定律有不同的方法。已发表的文献采用了有限差分法或误差函数解法。\cref{eq:ficks-second-law} 是菲克第二定律的误差函数解，能够预测混凝土构件内不同深度的氯离子浓度水平。
+求解菲克第二定律有各种不同的方法。已发表的文献采用了有限差分法或误差函数解法。\cref{eq:ficks-second-law} 是菲克第二定律的误差函数解，能够预测混凝土构件内不同深度的氯离子浓度水平。
 \begin{equation}
   \label{eq:ficks-second-law}
   C_\text{crit} = C(x=a, t) = C_0 +(C_{\text{S},\Delta x} - C_0)\left[ 1-\erf 
