--- a/contents/chp02.tex
+++ b/contents/chp02.tex
@@ -582,7 +582,8 @@ Stub abutments are characterized by sloped embankments under the end span of the
 
 Traditionally, full abutments are characterized by a vertical wall that retains the embankment fill and also transfers the bridge load to the supporting foundation at the base of the wall. Full abutments can also be in the form of a \acrfull{mse} system, which employs a fascia wall connected to a system of reinforcing elements in multiple layers that work with the backfill material to create a composite soil mass. This composite soil mass can then support vertical load and/or act as an earth retention system. There are two types of MSE abutments: true or mixed (Anderson and Brabant 2010). In a true MSE abutment, the bridge superstructure is supported on spread footings bearing directly on the top of the reinforced soil mass. In a mixed MSE abutment, a shallow bent cap with a row of piles is used to support the superstructure behind the MSE fascia wall, and the reinforced soil mass is used to retain the fill behind and adjacent to the end of the bridge. A MSE full abutment is pictured in \cref{fig:abutmenttypes}.
 
-Another recent form of abutment system is the \acrfull{grsibs}, which is described in FHWA publication FHWA-HRT-11-027 (Adams et al. 2011). This is a relatively new abutment system that has been used for accelerated bridge construction, and typically for short spans up to about 140 feet. The abutment uses alternating thin layers of compacted fill and geosynthetic reinforcement sheets that combine to form a reinforced soil mass foundation that directly supports the bridge superstructure without the need for piles. The geosynthetic reinforcement is connected into layers of precast facing blocks that are placed with the reinforcement and soil backfill. Once completed, the reinforced soil mass is ready to support the bridge.
+% Another recent form of abutment system is the \acrfull{grsibs}, which is described in FHWA publication FHWA-HRT-11-027 (Adams et al. 2011). This is a relatively new abutment system that has been used for accelerated bridge construction, and typically for short spans up to about 140 feet. The abutment uses alternating thin layers of compacted fill and geosynthetic reinforcement sheets that combine to form a reinforced soil mass foundation that directly supports the bridge superstructure without the need for piles. The geosynthetic reinforcement is connected into layers of precast facing blocks that are placed with the reinforcement and soil backfill. Once completed, the reinforced soil mass is ready to support the bridge.
+另一种最近常用的桥台系统是 \acrfull{grsibs}，它在 \gls*{fhwa} 出版物 FHWA-HRT-11-027（Adams 等人，2011 年）中有所描述。 这是一种相对较新的桥台系统，已用于\acrlong*{abc}，通常用于短跨度达约 140 英尺的桥梁。 桥台使用交替的薄层压实填料和土工合成材料加固板，结合形成加固土体基础，直接支撑桥梁上部结构，无需桩。 土工合成材料加固连接到与加固和土壤回填一起放置的预制饰面块层。 一旦完成，加固的土体就可以支撑桥梁了。
 
 Traditional abutments are typically concrete construction. When deep foundations are required to support the bent caps, they normally consist of timber, prestressed concrete square, solid round or hollow cylinder piles, CIP concrete drilled shafts, or steel HP or pipe pile sections.
 
@@ -601,7 +602,7 @@ In integral abutment systems, are attached directly to abutment, and thermally-i
 
 All of the elements, components, and subsystems that make up the overall bridge system are adversely affected in various degrees by both external and internal factors that contribute to reduced service life. External factors typically refer to loads or hazards, which can be both natural and man-made. Internal factors can pertain to such items as structure type (e.g. fracture critical), materials, and design/details.
 
-Following is a discussion of critical factors that affect bridge service life using a fault tree analysis approach. Section 2.3.1 discusses factors that affect the overall bridge system. The following sections, 2.3.2 through 2.3.4, address specific factors affecting deck, superstructure, and substructure components. Section 2.4 addresses options to avoid or mitigate these factors.
+Following is a discussion of critical factors that affect bridge service life using a fault tree analysis approach. Section 2.3.1 discusses factors that affect the overall bridge system. The following sections, 2.3.2 through 2.3.4, address specific factors affecting deck, superstructure, and substructure components. \cref{sec:options-enhance-sl} addresses options to avoid or mitigate these factors.
 
 \begin{figure}
   % \includegraphics[width=\linewidth]{factor-service-life.pdf}
@@ -1184,8 +1185,9 @@ of preventive maintenance as part of an overall bridge preservation program. Exa
 preventive maintenance activities that can be applied to decks, superstructure, and substructure components are
 further discussed in Section 2.4.1.3.
 
-\subsection{Factors Affecting Service Life of Deck Componet}\label{subsec:factors-affect-deck}
-The deck component includes several elements as described in Section 2.2.2.
+\subsection{Factors Affecting Service Life of Deck Componet}
+\label{subsec:factors-affect-deck}
+The deck component includes several elements as described in \cref{subsec:deck-component}.
 
 \begin{description}
   \item [Bridge deck] service life and the factors affecting service life are described in detail in \cref{chp:bridge-decks}. Concrete
@@ -1307,7 +1309,8 @@ Concrete superstructures in thermal or marine environments are not exposed to th
   \label{fig:longitudinal-cracking-adjacent-box-beam}
 \end{figure}
 
-Ultimately, these conditions have led to severe beam deterioration and failure causing premature replacement of entire bridges. On December 27, 2005, the east-side fascia beam of the Lakeview Drive Bridge over I-70 in Washington, Pennsylvania failed near mid-span and fell to the highway below, as shown in \cref{fig:failure-adjacent-box-beam}. Inspection of the bridge revealed heavy spalling and corrosion of the strands on the bottom flange of the failed non-composite prestressed concrete box beam. Additional corrosion was revealed on other box beams and the bridge was subsequently removed from service.
+% Ultimately, these conditions have led to severe beam deterioration and failure causing premature replacement of entire bridges. On December 27, 2005, the east-side fascia beam of the Lakeview Drive Bridge over I-70 in Washington, Pennsylvania failed near mid-span and fell to the highway below, as shown in \cref{fig:failure-adjacent-box-beam}. Inspection of the bridge revealed heavy spalling and corrosion of the strands on the bottom flange of the failed non-composite prestressed concrete box beam. Additional corrosion was revealed on other box beams and the bridge was subsequently removed from service.
+最终，这些情况导致梁严重退化和失效，导致整个桥梁过早更换。2005 年 12 月 27 日，位于宾夕法尼亚州华盛顿州 I--70 州际公路上的 Lakeview Drive Bridge 的东侧边梁在跨中附近断裂并倒塌至下方的高速公路，如\cref{fig:failure-adjacent-box-beam} 所示。 对桥梁的检查发现，失效的非复合预应力混凝土箱梁底部翼缘上的钢绞线严重剥落和腐蚀。其他箱梁上也出现了额外的腐蚀，随后桥梁被拆除。
 
 \begin{figure}
   \includegraphics[width=0.7\linewidth]{failure-adjacent-box.jpg}
@@ -1345,7 +1348,9 @@ The importance of considering these events has been exemplified by numerous brid
   \item The 1971 San Fernando Earthquake, and subsequent major earthquakes identified in \cref{subpar:seismic}, which caused catastrophic damage to numerous bridges and stimulated research relating to bridge performance during seismic events \cite{aashto1983s}.
 \end{itemize}
 
-\subsubsection{Substructure Deterioration due to Material Deterioration, Corrosion, and Section Loss}
+% \subsubsection{Substructure Deterioration due to Material Deterioration, Corrosion, and Section Loss}
+\subsubsection{材料\gls*{deterioration}、腐蚀和截面损失导致的下部结构\gls*{deterioration}}
+
 Corrosion deterioration in substructure elements is due to numerous causes, including:
 \begin{itemize}
   \item Chloride intrusion due to leakage of expansion joints and bridge drainage where deicing salts are utilized to remove snow and ice from bridge decks,
@@ -1403,9 +1408,7 @@ Climate-related impacts that require adaptation are already being observed in th
   \label{fig:sea-level-rise-1990-2100}
 \end{figure}
 
-Although there is still debate on the level of severity that will be experienced over the next decades because of
-climate changes, it is important to consider this factor when planning for new bridges or retrofitting existing bridges
-and located in areas that could be effected.
+Although there is still debate on the level of severity that will be xperienced over the next decades because of climate changes, it is important to consider this factor when planning for new bridges or retrofitting existing bridges and located in areas that could be effected.
 
 Currently there are no organized, formal plans for considering the possible effects of climate changes on existing
 and new bridges located in coastal areas. However, the major impact could be substructure and splash zone of the
@@ -1413,32 +1416,17 @@ columns located in the water.
 
 \subsubsection{Seized Bearings and Unintended Movement Restraint}
 
-The structural design of substructures is in part based on a distribution of longitudinal and transverse forces
-associated with the allowable movement of the superstructure. Fixed bearings provide an anchor that is intended to restrict “walking” of the superstructure resulting from shrinkage and cycling of expansion and contraction. The
-bearings are usually located longitudinally near the point of zero movement of a supported multi-span superstructure
-unit. Care must be exercised in locating the so-called “point of zero movement,” especially in the case of curved
-girder bridges. Existence of such a point could be viewed as an assumption, more than reality. \cref{chp:jointless-bridge} on jointless
-bridges provides a detailed discussion of the point of “zero movement” for curved girder bridges. Point of “zero
-movement” is more meaningful in instances of straight bridges with zero skew. Existence of skew or curvature
-complicates the determination of point of zero movement. These fixed bearings, used in combination with bearings
-designed to allow the superstructure to either move or slide over the top of the substructure, reduce restraining forces
-that would otherwise be required to resist the movement. Improper function or seizing of the bearings results in
-unintended movement restraint that can raise the force resisted by the substructure well above the intended design.
-This unintended restraint can cause unanticipated cracking with greater potential for corrosion. Proper bearing
-performance is essential to durability of substructure and is addressed in \cref{chp:bridge-bearings} of this Guide.
+The structural design of substructures is in part based on a distribution of longitudinal and transverse forces associated with the allowable movement of the superstructure. Fixed bearings provide an anchor that is intended to restrict “walking” of the superstructure resulting from shrinkage and cycling of expansion and contraction. The bearings are usually located longitudinally near the point of zero movement of a supported multi-span superstructure unit. Care must be exercised in locating the so-called “point of zero movement,” especially in the case of curved girder bridges. Existence of such a point could be viewed as an assumption, more than reality. \cref{chp:jointless-bridge} on jointless bridges provides a detailed discussion of the point of “zero movement” for curved girder bridges. Point of “zero movement” is more meaningful in instances of straight bridges with zero skew. Existence of skew or curvature complicates the determination of point of zero movement. These fixed bearings, used in combination with bearings designed to allow the superstructure to either move or slide over the top of the substructure, reduce restraining forces that would otherwise be required to resist the movement. Improper function or seizing of the bearings results in unintended movement restraint that can raise the force resisted by the substructure well above the intended design.  This unintended restraint can cause unanticipated cracking with greater potential for corrosion. Proper bearing performance is essential to durability of substructure and is addressed in \cref{chp:bridge-bearings} of this Guide.
 
-\section{Options for Enhancing Service Life}\label{sec:options-enhance-sl}
+\section{Options for Enhancing Service Life}
+\label{sec:options-enhance-sl}
 This section describes options for enhancing service life and addresses factors identified in Section 2.3.
 
 \subsection{System-Related Options}
 \subsubsection{Functional Options}
-Sometimes bridges are replaced because of functional issues well before their full potential service life is
-achieved. The following considerations should be incorporated into a bridge system where there is probability that
-future bridge widening or crossed roadway widening may be necessary:
+Sometimes bridges are replaced because of functional issues well before their full potential service life is achieved. The following considerations should be incorporated into a bridge system where there is probability that future bridge widening or crossed roadway widening may be necessary:
 \begin{itemize}
-  \item Use bridge system types that can be widened, particularly superstructures. Multi-girder superstructures
-  typically lend themselves to this ability. Cast-in-place concrete structures provide additional challenges for
-  widening.
+  \item Use bridge system types that can be widened, particularly superstructures. Multi-girder superstructures typically lend themselves to this ability. Cast-in-place concrete structures provide additional challenges for widening.
   \item  Consider longer spans when crossing roadways that have the potential for widening.
   \item Consider additional vertical clearance when setting limits for bridges that have the potential for future
   widening. Bridge widening along a deck cross slope can infringe on minimum vertical clearances if
@@ -1446,9 +1434,7 @@ future bridge widening or crossed roadway widening may be necessary:
 \end{itemize}
 
 \subsubsection{System Configuration Options}
-How the bridge system is configured will have significant impact on service life. Leaking deck joints have been
-identified as one of the leading causes of system deterioration. The following considerations should be incorporated
-into the system selection to avoid or mitigate this risk (see \cref{chp:jointless-bridge} on jointless bridges):
+How the bridge system is configured will have significant impact on service life. Leaking deck joints have been identified as one of the leading causes of system deterioration. The following considerations should be incorporated into the system selection to avoid or mitigate this risk (see \cref{chp:jointless-bridge} on jointless bridges):
 \paragraph{Integral Abutments}
 Consider integral abutments to eliminate joints at abutments.
 \begin{itemize}
@@ -1675,7 +1661,7 @@ should only be considered below the minimum scour elevation.
 
 The intent of this section is to outline an approach for selecting the most appropriate bridge systems to accommodate operational requirements and site conditions, while also achieving the desired target design service life. The process combines the requirements for selecting bridge systems on the basis of operational needs and initial construction cost with requirements for service life and life-cycle cost. The approach presented in this section must be developed in conjunction with strategies presented in subsequent chapters, which address materials, and specific components and elements in additional detail, such as bridge deck, joints, or bearings.
 
-Providing bridge systems with enhanced service life requires a complete understanding of the potential deterioration mechanisms, or factors affecting service life. These mechanisms, described in Section 2.3, are associated with load-induced conditions, local environmental hazards, production-created deficiencies, and lack of effective operational procedures. The avoidance or mitigation of these deterioration mechanisms through the appropriate selection of enhancement techniques is described in Section 2.4. The overall system selection process involves a detailed evaluation of these mechanisms as they would affect each major bridge component, subsystem, and element, and identification of a group of individual strategies that together define an optimum bridge system configuration. This integrated approach of combining operational and service life requirements will result in the optimum bridge system with the greatest potential for enhanced service life.
+Providing bridge systems with enhanced service life requires a complete understanding of the potential deterioration mechanisms, or factors affecting service life. These mechanisms, described in Section 2.3, are associated with load-induced conditions, local environmental hazards, production-created deficiencies, and lack of effective operational procedures. The avoidance or mitigation of these deterioration mechanisms through the appropriate selection of enhancement techniques is described in \cref{sec:options-enhance-sl}. The overall system selection process involves a detailed evaluation of these mechanisms as they would affect each major bridge component, subsystem, and element, and identification of a group of individual strategies that together define an optimum bridge system configuration. This integrated approach of combining operational and service life requirements will result in the optimum bridge system with the greatest potential for enhanced service life.
 
 \subsection{Service Life Design Methodology}
 
@@ -1683,10 +1669,9 @@ Providing bridge systems with enhanced service life requires a complete understa
 
 
 \subsection{System Selection Process Outline}
+\label{subsec:system-selection-process-outline}
 
-A process for selecting the optimum bridge system is shown in Figures 2.45a through 2.45c, in which the various
-steps involved are flow-charted. The outlined process involves four major steps, which are described in the various
-flow chart blocks:
+A process for selecting the optimum bridge system is shown in Figures 2.45a through 2.45c, in which the various steps involved are flow-charted. The outlined process involves four major steps, which are described in the various flow chart blocks:
 
 \begin{enumerate}
   \item Identifying demand, which includes requirements that the bridge must satisfy—Block 1;
@@ -1709,59 +1694,30 @@ The following is a discussion of the steps in the selection process relating to 
 
 Block 1. Identify demand parameters that the bridge must satisfy which includes:
 \begin{enumerate}
-  \item Operational requirements. These relate to issues as the type of corridor, traffic and truck percentages,
-  vehicle loads, and mixed-use requirements. This information establishes requirements for capacity,
-  number of lanes, and other operational issues.
-  \item Site requirements. These typically relate to issues that affect bridge layout including, features crossed,
-  geometrics involving curvature or skew, geotechnical data, and other constraints.
-  \item Service Life requirements. Based on the type of corridor and traffic demand, a judgment is made,
-  usually by bridge owner, as to the importance of the bridge and the target service life the bridge should
-  be designed for.
-  \item Future considerations. Based on the type of corridor, an evaluation is made regarding the potential for
-  future needs. This might include the probability of future traffic demand that would require bridge
-  widening, or the potential of having to widen any crossed roadways that might affect span layout.
+  \item Operational requirements. These relate to issues as the type of corridor, traffic and truck percentages, vehicle loads, and mixed-use requirements. This information establishes requirements for capacity, number of lanes, and other operational issues.
+  \item Site requirements. These typically relate to issues that affect bridge layout including, features crossed, geometrics involving curvature or skew, geotechnical data, and other constraints.
+  \item Service Life requirements. Based on the type of corridor and traffic demand, a judgment is made, usually by bridge owner, as to the importance of the bridge and the target service life the bridge should be designed for.
+  \item Future considerations. Based on the type of corridor, an evaluation is made regarding the potential for future needs. This might include the probability of future traffic demand that would require bridge widening, or the potential of having to widen any crossed roadways that might affect span layout.
 \end{enumerate}
 
-Overall, these requirements relate to how the bridge must function and how long it should last. They may also
-include limitations on how a bridge might be constructed, how much it should cost, or how it might look in a
-given setting. Further examples of these items are listed in Table 2.2.
+Overall, these requirements relate to how the bridge must function and how long it should last. They may also include limitations on how a bridge might be constructed, how much it should cost, or how it might look in a given setting. Further examples of these items are listed in Table 2.2.
 
 
 
 \subsection{System Process Tables}
 
-This process is further expanded in Table 2.2 , which illustrates the process design phases of the preliminary
-planning or Type, Size and Location (TS\&L) stage, and final design stage for a new bridge. Table 2.2 supplements
-the information and examples provided in Sections 2.5.2 and 2.5.3.
+This process is further expanded in Table 2.2 , which illustrates the process design phases of the preliminary planning or Type, Size and Location (TS\&L) stage, and final design stage for a new bridge. Table 2.2 supplements the information and examples provided in Sections 2.5.2 and 2.5.3.
 
 \subsection{Existing Bridges}
+\subsection{既有桥梁}
+% Many of the service life considerations for new design are also applicable to existing bridges. An inherent difference for existing bridges however, is that the bridge system has already been selected, designed, and constructed, and may have been in service for a considerable time. This means that it will have been subjected to factors affecting service life and may have already experienced some level of deterioration. The level of deterioration will dictate the type of rehabilitation required for restoration. The process for restoring and extending the service life of an existing bridge involves a detailed system evaluation rather than a system selection. The process for existing bridges will follow a similar flow chart to that shown in \cref{subsec:system-selection-process-outline}, except that it will start at Block 3 and will entail an evaluation of the existing system components, subsystems, and elements against the various factors in the fault tree branches. Strategies for mitigating the factors are more limited and are more focused on protecting the existing elements and materials. However, they could also consider various forms of retrofit, for example, converting simple spans with deck joints to continuous spans without deck joints. The final evaluation is to determine the optimal protection strategy that will extend the existing bridge service life.
+许多对于新建桥梁使用寿命的考虑因素也适用于既有桥梁。既有桥梁与新建桥梁的一个内在差异是：桥梁\gls*{system}已经被选择、设计和建造，并且可能已经投入使用了相当长的时间。这意味着它会受到影响使用寿命的因素的影响，并且可能已经经历了某种程度的\gls*{deterioration}。 \gls*{deterioration}程度将决定恢复所需的修复类型。 恢复和延长现有桥梁使用寿命的过程涉及详细的系统评估，而不是系统选择。 现有桥梁的流程将遵循与\cref{subsec:system-selection-process-outline}所示类似的流程图，不同之处在于它将从 Block 3 开始，并且需要针对故障中的各种因素评估现有系统\gls*{component}、\gls*{subsystem}和\gls*{element}分支。 减轻这些因素的策略更为有限，并且更侧重于保护现有\gls*{element}和材料。 但是，他们也可以考虑各种形式的改造，例如，将带有桥面板接头的简支跨转换为没有桥面板接头的连续跨。最终评估是确定将延长现有桥梁使用寿命的最佳保护策略。
 
-Many of the service life considerations for new design are also applicable to existing bridges. An inherent
-difference for existing bridges however, is that the bridge system has already been selected, designed, and
-constructed, and may have been in service for a considerable time. This means that it will have been subjected to
-factors affecting service life and may have already experienced some level of deterioration. The level of
-deterioration will dictate the type of rehabilitation required for restoration. The process for restoring and extending
-the service life of an existing bridge involves a detailed system evaluation rather than a system selection. The process
-for existing bridges will follow a similar flow chart to that shown in Section 2.5.2, except that it will start at Block 3
-and will entail an evaluation of the existing system components, subsystems, and elements against the various factors
-in the fault tree branches. Strategies for mitigating the factors are more limited and are more focused on protecting
-the existing elements and materials. However, they could also consider various forms of retrofit, for example,
-converting simple spans with deck joints to continuous spans without deck joints. The final evaluation is to
-determine the optimal protection strategy that will extend the existing bridge service life.
+% \section{Bridge Management}
+\section{桥梁管理}
+A major component of the Guide and this chapter is address the type of data that should be maintained for a bridge from design through fabrication, construction, and operation. The framework for this documentation is the introduction of the Owner's Manual described in \cref{chp:general-frame}. A bridge Owner's Manual should be provided for unique bridges or when requested by bridge owner. The information to be included in the Owner's Manual is essential for proper future inspection and maintenance of the bridge in order to achieve the bridge's target design service life. The Owner's Manual, should be provided to bridge owner just before opening the bridge to traffic. The bridge Owner's Manual should be treated similar to a design calculation document that is usually provided to the bridge owner and it is recommended that the Owner's Manual be reviewed by an independent engineer. \cref{chp:general-frame} provides a more detailed description of bridge Owner's Manual.
 
-\section{Bridge Management}
-
-A major component of the Guide and this chapter is address the type of data that should be maintained for a
-bridge from design through fabrication, construction, and operation. The framework for this documentation is the
-introduction of the Owner's Manual described in \cref{chp:general-frame}. A bridge Owner's Manual should be provided for unique
-bridges or when requested by bridge owner. The information to be included in the Owner's Manual is essential for
-proper future inspection and maintenance of the bridge in order to achieve the bridge's target design service life. The
-Owner's Manual, should be provided to bridge owner just before opening the bridge to traffic. The bridge Owner's
-Manual should be treated similar to a design calculation document that is usually provided to the bridge owner and it is recommended that the Owner's Manual be reviewed by an independent engineer. \cref{chp:general-frame} provides a more
-detailed description of bridge Owner's Manual.
-
-Engineering judgment must be exercised in identifying the type of information to be included in the bridge
-Owner's Manual. Following is partial list of information that could be included in the bridge Owner's Manual.
+Engineering judgment must be exercised in identifying the type of information to be included in the bridge Owner's Manual. Following is partial list of information that could be included in the bridge Owner's Manual.
 
 \begin{itemize}
   \item Target design service life of the bridge as determined by owner;
@@ -1772,19 +1728,13 @@ Owner's Manual. Following is partial list of information that could be included 
   \item All strategies that were designed into the bridge to avoid or mitigate factors affecting service life;
   \item Procedure used to estimate the service life of bridge element, component, and subsystem;
   \item Description of any special steps or requirements that must be followed during construction
-  \item Specific maintenance needs for various bridge element, components, subsystems, and elements in order to
-  achieve their expected service lives;
-  \item All considerations that were incorporated into the overall bridge system design to accommodate
-  rehabilitation or replacement of those items, including expected schedule;
-  \item Identification of all “hot spot” areas of the bridge that would require special inspection or data to be collected
-  during inspection that could be coordinated with FHWA-sponsored Long-Term Bridge Performance Program
-  (LTBPP); and
-  \item Health monitoring of unique bridges to develop a comprehensive bridge management system might be
-  needed and should be described in detail.
+  \item Specific maintenance needs for various bridge element, components, subsystems, and elements in order to achieve their expected service lives;
+  \item All considerations that were incorporated into the overall bridge system design to accommodate rehabilitation or replacement of those items, including expected schedule;
+  \item Identification of all “hot spot” areas of the bridge that would require special inspection or data to be collected during inspection that could be coordinated with FHWA-sponsored Long-Term Bridge Performance Program (LTBPP); and
+  \item Health monitoring of unique bridges to develop a comprehensive bridge management system might be needed and should be described in detail.
 \end{itemize}
 
-The bridge Owner's Manual should also describe how the bridge was designed, constructed, and intended to
-function from an operational perspective including:
+The bridge Owner's Manual should also describe how the bridge was designed, constructed, and intended to function from an operational perspective including:
 
 \begin{itemize}
   \item Design loads, particularly any special vehicle types;
