--- a/contents/chp04.tex
+++ b/contents/chp04.tex
@@ -997,7 +997,8 @@ identifies the flowchart for the service life factor mitigation process.
   \caption{Mitigation of Factors Affecting Service Life Process.}\label{fig:mitigation-process}
 \end{figure}
 
-An identifying number in each step designates each activity within the flowchart. These identifying numbers are used in the following discussion of the various elements of the flowcharts.
+% An identifying number in each step designates each activity within the flowchart. These identifying numbers are used in the following discussion of the various elements of the flowcharts.
+每个步骤中的标识号指定流程图中的每个活动。 这些标识号用于以下流程图的各种元素的讨论中。
 
 \subsubsection*{Steps 1a and 1b. Development of Design Criteria}
 These activities identify the project local operational site requirements and the local factors affecting service life.
