--- a/contents/chp06.tex
+++ b/contents/chp06.tex
@@ -667,9 +667,8 @@ bridges.
 Uncoated weathering grade steels have a chemical composition containing small amounts of copper, phosphorus,
 chromium, nickel, and silicon to attain their weathering or corrosion resistant properties.
 
-Weathering grade steels are currently supplied under AASHTO Specification M270, ASTM A709 Grade 50W,
-and in high performance steel grades HPS 50W, 70W, and 100W. When used in the right environment, these steels
-are very cost-effective in both the short and long term as they eliminate the need for shop and field painting.
+% Weathering grade steels are currently supplied under AASHTO Specification M270, ASTM A709 Grade 50W, and in high performance steel grades HPS 50W, 70W, and 100W. When used in the right environment, these steels are very cost-effective in both the short and long term as they eliminate the need for shop and field painting.
+耐候级钢目前根据 AASHTO 规范 M270、ASTM A709 50W 级和高性能钢级 HPS 50W、70W 和 100W 供应。 当在合适的环境中使用时，这些钢材在短期和长期内都非常具有成本效益，因为它们消除了车间和现场喷漆的需要。
 
 Weather steels have been successfully utilized on coal hopper cars, buildings, and electric transmission towers
 and began appearing in bridges on a large scale in the mid-1960s. Currently, thousands of weather steel bridges are
@@ -1796,11 +1795,8 @@ encountered, depending on the exposure conditions encountered on both a macro- a
 
 \subsection{Performance Evaluation of Individual Protective Coating Systems Products}
 \label{subsec:evaluation-protective-coating}
-Independent verification of coating system performance based on laboratory testing and/or field exposure is a
-critical component to selecting a coating system. For a given coating system, there may be multiple manufacturers. It
-is not safe to assume that all coating systems within a given generic category are created equal. Therefore, careful
-evaluation of coating system performance prior to full-scale field application is employed to determine which of the
-candidate systems will perform the best.
+% Independent verification of coating system performance based on laboratory testing and/or field exposure is a critical component to selecting a coating system. For a given coating system, there may be multiple manufacturers. It is not safe to assume that all coating systems within a given generic category are created equal. Therefore, careful evaluation of coating system performance prior to full-scale field application is employed to determine which of the candidate systems will perform the best.
+基于实验室测试和/或现场暴露的涂层系统性能的独立验证是选择涂层系统的关键组成部分。 对于给定的涂层系统，可能有多个制造商。 假设给定通用类别中的所有涂料系统都是平等的是不安全的。 因此，在全面现场应用之前对涂层系统性能进行仔细评估，以确定哪个候选系统性能最佳。
 
 AASHTO oversees a materials testing branch—the National Transportation Product Evaluation Program
 (NTPEP)—which is comprised of highway safety and construction materials project panels. These panels are made
