--- a/setup/setup.tex
+++ b/setup/setup.tex
@@ -351,4 +351,8 @@
   description={Visual Stability Index, 视觉稳定系数}
 ]{vsi}{VSI}{视觉稳定系数}
 
+\newacronym[%
+  description={Poly-Vinyl Alcohol, 聚乙烯醇}
+]{pva}{PVA}{聚乙烯醇}
+
 %%% ----------------------------------------------------------------------------
